--- a/css/marcias-portfolio.webflow.css
+++ b/css/marcias-portfolio.webflow.css
@@ -95,7 +95,7 @@ blockquote {
   height: 100%;
   padding-top: 120px;
   padding-bottom: 80px;
-  background-image: url('../images/laptop-desk.jpg');
+  /* background-image: url('../images/laptop-desk.jpg'); */
 }
 
 .hero-section.blog-post-hero {
@@ -263,6 +263,7 @@ blockquote {
   letter-spacing: 2px;
   text-transform: uppercase;
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.37);
+  z-index:10000;
 }
 
 ._40block {
@@ -350,7 +351,7 @@ blockquote {
   bottom: 0px;
   width: 100%;
   height: 100%;
-  background-image: url('../images/laptop-desk.jpg');
+  /* background-image: url('../images/laptop-desk.jpg'); */
   background-position: 0px 0px;
   background-size: cover;
 }
