--- a/css/marcias-portfolio.webflow.css
+++ b/css/marcias-portfolio.webflow.css
@@ -351,7 +351,7 @@ blockquote {
   bottom: 0px;
   width: 100%;
   height: 100%;
-  /* background-image: url('../images/laptop-desk.jpg'); */
+  background-image: url('../images/laptop-desk.jpg');
   background-position: 0px 0px;
   background-size: cover;
 }
